responsive portfolio done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About | Katsuhito Tanabe</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -26,7 +27,7 @@
 
       <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
 
-      <p>I go by Katsu I was born in Venzuela where my mom is from and my dad is Japanese, I have been living in Utah for 20 years, I'm married with no kids yet I enloy the outdoor, hiking and moutain biking.I have a siamese cat named Evee.</p>
+      <p>I go by Katsu I was born in Venzuela where my mom is from and my dad is Japanese, I have been living in Utah for 20 years, I'm married with no kids yet I enloy the outdoors, hiking and moutain biking.I have a siamese cat named Evee.</p>
 
       <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
 
