--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About | Katsuhito Tanabe</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,15 +24,16 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
+      <h1>Full Stack Web Developer</h1>
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/selfie 2.jpg" class="auth-image" alt="Your Name">
 
-      <p>I go by Katsu I was born in Venzuela where my mom is from and my dad is Japanese, I have been living in Utah for 20 years, I'm married with no kids yet I enloy the outdoors, hiking and moutain biking.I have a siamese cat named Evee.</p>
+      <p>I go by Katsu I was born in Venzuela where my mom is from and my dad is Japanese, I have been living in Utah for 20 years, I'm married with no kids yet I enjoy the outdoors, hiking and moutain biking.</p>
 
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+      <p>I work as a Parts Specialist for Hunter Douglas and currently going the University of Utah Coding Boot Camp program to become a more valuable asset</p>
 
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p>Fluent in two languages: English and Spanish, easy going, able to adapt to most situations.</p>
 
     </section>
 
