--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Katsu Tanabe</a>
+      <a href="index.html" id="logo">Katsuhito Tanabe</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -29,11 +29,11 @@
         <ul>
           <li>
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+            <input type="text" id="name" name="name" placeholder="Katsuhito Tanabe" required="required">
           </li>
           <li>
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+            <input type="email" id="email" name="email" placeholder="katsu1@live.com" required="required">
           </li>
           <li>
             <label for="message">Message</label>
