--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,11 @@
         <ul>
           <li>
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Katsuhito Tanabe" required="required">
+            <input type="text" id="name" name="name" placeholder=" " required="required">
           </li>
           <li>
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="katsu1@live.com" required="required">
+            <input type="email" id="email" name="email" placeholder=" " required="required">
           </li>
           <li>
             <label for="message">Message</label>
