--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,14 @@
         <h3>Giphy App</h3>
 
       </div>
+
+      <div class="work">
+        
+        <a href="https://katsutanabe.github.io/giphy-homework/" target = "_blank"><img src="assets/images/Train Scheduler.PNG" alt="Firebase homework" height="205.5px" width="274px"></a>
+        <h3>Train Scheduler</h3>
+
+      </div>
+
       <div class="work">
         
         <a href="https://mattwhittle10.github.io/ProjectTest/index.html" target = "_blank"><img src="assets/images/Proyect 1.PNG" alt="Rock Paper Scissors" height="205.5px" width="274px"></a>
