--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
 
       <div class="work">
         
-        <a href="https://katsutanabe.github.io/giphy-homework/" target = "_blank"><img src="assets/images/Train Scheduler.PNG" alt="Firebase homework" height="205.5px" width="274px"></a>
+        <a href="https://katsutanabe.github.io/Train-Scheduler/" target = "_blank"><img src="assets/images/Train Scheduler.PNG" alt="Firebase homework" height="205.5px" width="274px"></a>
         <h3>Train Scheduler</h3>
 
       </div>
