--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      Copyright &copy; | <a href="https://github.com/katsutanabe">GitHub Repo</a></p> 
     </div>
   </footer>
 </body>
