--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      Copyright &copy; | <a href="https://github.com/katsutanabe">GitHub Repo</a></p>
     </div>
   </footer>
 </body>
